<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest01MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/navigate_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:text="@string/navigate_to_secondary_action_edit_button"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2">

        <EditText
            android:id="@+id/left_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:layout_gravity="center"
            android:text="@string/left_edit_text"
            android:layout_row="0"
            android:layout_column="0"
            android:saveEnabled="false"/>

        <EditText
            android:id="@+id/right_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:layout_gravity="center"
            android:text="@string/right_edit_text"
            android:layout_row="0"
            android:layout_column="1"
            android:saveEnabled="false"/>

        <Button
            android:id="@+id/left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_button"
            android:layout_gravity="center"
            android:layout_row="1"
            android:layout_column="0"/>

        <Button
            android:id="@+id/right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_button"
            android:layout_gravity="center"
            android:layout_row="1"
            android:layout_column="1"/>

    </GridLayout>

</LinearLayout>